--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>闻达</title>
+    <title>基于律师知识的人工智能服务</title>
   </head>
   <body>
     <div id="app"></div>
